k8s/overlays/staging/core-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
spec:
  replicas: 1
