k8s/overlays/staging/gateway-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  rules:
    - host: staging-gateway-micr.duckdns.org
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
  tls:
    - hosts:
        - gateway-micr.duckdns.org
      secretName: gateway-cert
